# Rust-log-collector

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  log-schema.text  vector-file.yaml  vector-stdin.yaml  vector.yaml
migrations/: 001_initialize_db_tables.sql
src/: builder.rs  generator.rs  lib.rs  logs.rs  main.rs  setting.rs  settings.rs
