[package]
name = "Rust-log-collector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Rust-log-collector"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = { version = "0.1.41", features = ["attributes"] }
serde_json = "1.0"
base62 = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
tracing-appender = "0.2.3"
